# TrtPluginKit

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_run.sh
base/: IPluginBase.h
cmake/: FindTensorRT.cmake
common/: CMakeLists.txt  common.cpp  common.h
plugins/deformable_aggregation/: CMakeLists.txt  DeformableAggregationKernel.cu  DeformableAggregationKernel.h  DeformableAggregationParameters.h  DeformableAggregationPlugin.cpp  DeformableAggregationPlugin.h  README.md
plugins/deformable_aggregation/python/: create_plugin_network.py
plugins/deformable_aggregation/python_test/: create_plugin_network.py
plugins/plugin_example_identity_conv_v3/: CMakeLists.txt  IdentityConvParameters.h  IdentityConvPluginV3.cpp  IdentityConvPluginV3.h  README.md
plugins/relu_torch_tensorrt_example/: CustomReLUPlugin.cpp  CustomReLUPlugin.h  CustomReLUPluginKernel.cu  CustomReLUPluginKernel.h  README.md
plugins/relu_torch_tensorrt_example/python/: convert_to_trt.py
python_test/: create_identity_network.py
